<?xml version="1.0"?>
<package format="2">
    <name>glm_ros</name>
    <version>0.9.8</version>
    <description>OpenGL Mathematics (GLM) is a header only C++ mathematics library for graphics software based on the OpenGL Shading Language (GLSL) specifications.</description>
    <maintainer email="xaedes@gmail.com">xaedes</maintainer>
    <license>GLM can be distributed and/or modified under the terms of either
a) The Happy Bunny License, or b) the MIT License.</license>
    <!-- <author email=""></author> -->
    <buildtool_depend>catkin</buildtool_depend>
</package>